<resources>
    <string name="app_name">ShoppingList</string>
    <string name="product_name">Product Name</string>
    <string name="product_name1">Product Name</string>
    <string name="_0">0</string>
    <string name="delete_alert">Delete Alert</string>
    <string name="are_you_sure_that_you_want_to_delete_this_product">Are you sure that you want to delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="product_name3">product name</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="qtt">0</string>
    <string name="done">Done</string>
    <string name="delete1">Delete</string>
    <string name="create">+</string>
</resources>