<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetailActivity">

    <EditText
        android:id="@+id/editTextProductName"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/product_name3"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonIncrement"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="24dp"
        android:text="@string/plus"
        app:layout_constraintBottom_toBottomOf="@+id/textViewQtt"
        app:layout_constraintEnd_toStartOf="@+id/textViewQtt"
        app:layout_constraintTop_toTopOf="@+id/textViewQtt" />

    <Button
        android:id="@+id/buttonDecrement"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="24dp"
        android:text="@string/minus"
        app:layout_constraintBottom_toBottomOf="@+id/textViewQtt"
        app:layout_constraintStart_toEndOf="@+id/textViewQtt"
        app:layout_constraintTop_toTopOf="@+id/textViewQtt" />

    <TextView
        android:id="@+id/textViewQtt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/qtt"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextProductName" />

    <Button
        android:id="@+id/buttonDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/delete1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>